src/test/ui/regions/regions-close-object-into-object-2.stderr
error: cannot infer an appropriate lifetime
  --> $DIR/regions-close-object-into-object-2.rs:10:11
   |
LL | fn g<'a, T: 'static>(v: Box<dyn A<T> + 'a>) -> Box<dyn X + 'static> {
   |                         ------------------ data with this lifetime...
LL |     box B(&*v) as Box<dyn X>
   |     ------^^^---------------
   |     |     |
   |     |     ...and is captured here
   |     ...is required to be `'static` by this...
   |
help: consider changing the trait object's explicit `'static` bound
   |
LL | fn g<'a, T: 'static>(v: Box<dyn A<T> + 'a>) -> Box<dyn X + 'a> {
   |                                                            ^^
help: alternatively, set an explicit `'static` lifetime in this parameter
   |
LL | fn g<'a, T: 'static>(v: std::boxed::Box<(dyn A<T> + 'static)>) -> Box<dyn X + 'static> {
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

